--- a/awesome-site/index.html
+++ b/awesome-site/index.html
@@ -1,19 +1,28 @@
 <!-- Объявление формата документа -->
 <!DOCTYPE html>
 <html lang="ru" dir="ltr">
+
     <!-- Техническая информация о документе -->
     <head>
+
         <!-- Определяем кодировку документа -->
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+
         <!-- Задаем заголовок документа -->
         <title>First page</title>
+
         <!-- Подключаем внешнюю таблицу стилей -->
         <link  rel="stylesheet" type="text/css" href="css/style.css">
         <link  rel="stylesheet" type="text/css" href="css/fonts.css">
         <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&display=swap&subset=cyrillic" rel="stylesheet">
+
+        <!-- Подключаем Внешние библиотеки -->
+        <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+
         <!-- Подключаем сценарии -->
         <script src="js/script.js"></script>
+        <script  src="js/popup.js"></script>
     </head>
 
     <!-- Основная часть документа -->
@@ -105,37 +114,37 @@
                 <p class="main-title-description">Lorem ipsum dolor sit amet</p>
 
                 <div class="portfolio-container">
-                    <div class="portfolio-item" style="background-image: url(img/portfolio/img09.jpg)">
+                    <div class="portfolio-item" style="background-image: url(img/portfolio/img09.jpg)" data-src="img/portfolio/img09.jpg">
                         <div class="description-container">
                             <p class="portfolio-title">Lorem ipsum</p>
                             <p  class="portfolio-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                         </div>
                     </div>
-                    <div class="portfolio-item" style="background-image: url(img/portfolio/img11.jpg)">
+                    <div class="portfolio-item" style="background-image: url(img/portfolio/img11.jpg)" data-src="img/portfolio/img11.jpg">
                         <div class="description-container">
                             <p class="portfolio-title">Lorem ipsum</p>
                             <p  class="portfolio-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                         </div>
                     </div>
-                    <div class="portfolio-item" style="background-image: url(img/portfolio/img10.jpg)">
+                    <div class="portfolio-item" style="background-image: url(img/portfolio/img10.jpg)" data-src="img/portfolio/img10.jpg">
                         <div class="description-container">
                             <p class="portfolio-title">Lorem ipsum</p>
                             <p  class="portfolio-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                         </div>
                     </div>
-                    <div class="portfolio-item" style="background-image: url(img/portfolio/img12.jpg)">
+                    <div class="portfolio-item" style="background-image: url(img/portfolio/img12.jpg)" data-src="img/portfolio/img12.jpg">
                         <div class="description-container">
                             <p class="portfolio-title">Lorem ipsum</p>
                             <p  class="portfolio-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                         </div>
                     </div>
-                    <div class="portfolio-item" style="background-image: url(img/portfolio/img13.jpg)">
+                    <div class="portfolio-item" style="background-image: url(img/portfolio/img13.jpg)" data-src="img/portfolio/img13.jpg">
                         <div class="description-container">
                             <p class="portfolio-title">Lorem ipsum</p>
                             <p  class="portfolio-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                         </div>
                     </div>
-                    <div class="portfolio-item" style="background-image: url(img/portfolio/img14.jpg)">
+                    <div class="portfolio-item" style="background-image: url(img/portfolio/img14.jpg)" data-src="img/portfolio/img14.jpg">
                         <div class="description-container">
                             <p class="portfolio-title">Lorem ipsum</p>
                             <p  class="portfolio-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
